# textMetrics-Worker

./: .gitignore  pyproject.toml
.ipynb_checkpoints/: gensim-checkpoint.ipynb
text_metrics/: amazon_reviews_crawler.py  fetch.py  main.py  test_fetcher.py  test_sentimental_model.py  train.py  worker.py
text_metrics/modules/: tasks.py  training.py
text_metrics/modules/analyzers/: sentimental_analysis.py
text_metrics/modules/crawler/: amazon_review.py
text_metrics/modules/enums/: general.py  polarity.py
text_metrics/modules/extractors/: amazon_review_polarity.py  twitter_data_1.py  twitter_data_2.py
text_metrics/modules/helpers/: preprocess.py  timer.py
text_metrics/modules/helpers/server/: __init__.py  job_api.py  product_api.py
text_metrics/modules/models/: amazon_review.py  job.py  label_data.py  product.py
text_metrics/modules/trainers/: bert.py
textmetrics/: amazon_reviews_crawler.py  fetch.py  main.py  test_fetcher.py  test_sentimental_model.py  train.py  worker.py
textmetrics/modules/: tasks.py  training.py
textmetrics/modules/analyzers/: sentimental_analysis.py
textmetrics/modules/crawler/: amazon_review.py
textmetrics/modules/enums/: job.py
textmetrics/modules/extractors/: amazon_review_polarity.py  twitter_data_1.py  twitter_data_2.py
textmetrics/modules/helpers/: string_helper.py  terminal_helper.py
textmetrics/modules/helpers/server/: __init__.py  job_api.py  product_api.py
textmetrics/modules/models/: amazon_review.py  job.py  label_data.py  review.py
textmetrics/modules/trainers/: bert.py
(+1 files in other folders)
